--- a/example.bib
+++ b/example.bib
@@ -70,6 +70,15 @@
      year      = "2015"
 }
 
+@article{neutrinoflux,
+     author    = "A.A.Aguilar-Arevalo et al.",
+     title     = "The Neutrino Flux prediction at MiniBooNE.",
+ collaboration = "MiniBooNE",
+     journal   = "Phys. Rev.",
+     volume    = "D79",
+     pages     ="072002",
+     year      = "2009"
+}
 @article{Amato:1998xt,
      author    = "Amato, S. and others",
      title     = "LHCb technical proposal",
