--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -27,7 +27,7 @@ Both the light collection system and the TPC create analog signals that is read 
 
 \section{MicroBooNE's Physics Goals} 
 \subsection{The low-energy excess}
-The primary goal of the MicroBooNE experiment is to study and investigate the low-energy excess seen in MiniBooNE \ref{fig:lee} \cite{miniboone1} \cite{miniboone2}. MiniBooNE was on the BNB which produced both $\nu_{]mu}$ and $\overline{\nu_{\mu}}$ modes. MiniBooNE searched for appearances of $\nu_e$ in neutrino mode and $\overline{\nu_e}$ in anti-neutrino mode. In both modes, MiniBooNE observed an excess over the expected backgrounds at low energies.  MicroBooNE has the capability of confirming or denying this excess as electrons or photons due to the detector being in the same beam, having a similar baseline, and lastly the detector being able to clearly distinguish between electrons and photons. LArTPCs use the topology of events as well as energy loss near the vertex to differentiate between single $e^-$ tracks and photon-induced induced pair production $\gamma \rightarrow e^+e^-$, which wasn't possible in MiniBooNE, a cherenkov detector. This technique has been shown in the ArgoNeuT detector and a side by side comparison of both event types in a LArTPC can be seen in figure \ref{fig:egamma}. An excess in electrons would point towards new oscillation physics beyond the standard model, while photons would be within the standard model. MicroBooNE will observe a 4-5$\sigma$ signal.  
+The primary goal of the MicroBooNE experiment is to study and investigate the low-energy excess seen in MiniBooNE and shown in figure \ref{fig:lee} \cite{miniboone1} \cite{miniboone2}. MiniBooNE was on the BNB which produced both $\nu_{mu}$ and $\overline{\nu_{\mu}}$ modes. MiniBooNE searched for appearances of $\nu_e$ in neutrino mode and $\overline{\nu_e}$ in anti-neutrino mode. In both modes, MiniBooNE observed an excess over the expected backgrounds at low energies. MiniBooNE's low-energy excess is either mis'ided photons from background or electrons from a $\nu_e$ appearance. MicroBooNE has the capability of confirming or denying this excess as electrons or photons due to the detector being in the same beam, having a similar baseline, and lastly the detector being able to clearly distinguish between electrons and photons. LArTPCs use the topology of events as well as energy loss near the vertex to differentiate between single $e^-$ tracks and photon-induced induced pair production $\gamma \rightarrow e^+e^-$, which wasn't possible in MiniBooNE, a cherenkov detector. This technique has been shown in the ArgoNeuT detector and a side by side comparison of both event types in a LArTPC can be seen in figure \ref{fig:egamma}. An excess in electrons would point towards new oscillation physics beyond the standard model, while photons would be within the standard model. MicroBooNE will observe a 4-5$\sigma$ signal.  
 
 \begin{figure}[htp!]
 \centering
@@ -61,7 +61,7 @@ One of the cross-section measurements MicroBooNE can make is an inclusive charge
 The last physics goal for the MicroBooNE collaboration is to provide important information regarding LArTPC technology. Being the first large scale LArTPCs in the US, MicroBooNE will be able to provide improvements to High Voltage (HV) distribution, Noise Characterization \cite{noisechar}, and Michel Electron Reconstruction \cite{michel}. 
 
 \section{The Booster Neutrino Beam}
-The MicroBooNE detector is stationed at Fermilab where it receives neutrinos from both the BNB and NuMI beams. MicroBooNE is on-axis for the BNB and off-axis by 135 mrad for NuMI. For the purpose of this analysis, only data from the BNB was used. This section will discuss how neutrinos are created using the BNB. How these neutrinos are produced as well as their flux through the MicroBooNE detector is necessary for any analysis because of the systematic uncertainties the beam introduces to a cross-section measurement. An aerial view of Fermilab as well as the BNB is shown in figure \ref{fig:fnal}
+The MicroBooNE detector is stationed at Fermilab where it receives neutrinos from both the BNB and NuMI beams. MicroBooNE is on-axis for the BNB and off-axis by 135 mrad for NuMI. For the purpose of this analysis, only data from the BNB was used. This section will discuss how neutrinos are created using the BNB. How these neutrinos are produced as well as their flux through the MicroBooNE detector is necessary for any analysis because of the systematic uncertainties the beam introduces to a cross-section measurement. An aerial view of Fermilab as well as the BNB is shown in figure \ref{fig:fnal}.
 
 \begin{figure}[htp!]
 \centering
@@ -71,7 +71,7 @@ The MicroBooNE detector is stationed at Fermilab where it receives neutrinos fro
 \end{figure}
 
 \subsection{Creating the Booster Neutrino Beam}
-The BNB is a very pure $\nu_{\mu}$ beam, with only 0.6\% contamination from $\nu_{e}s$. The energy also peaks around 700 MeV which is desired based on the probability of oscillation equation which depends on the value of $L/E$, where $L$ is the distance of the detector from the neutrino beam and $E$ is the energy of the neutrino beam. $L/E$ was chosen to match the LSND experiment. The BNB collides 8.9 GeV/c momentum protons from the FNAL booster synchrotron into a beryllium target which produces a high flux of neutrinos. The protons originate from $H^2$ gas molecules that are turned into $H^-$ ions by a Cockroft-Walton generator. The $H^-$ initially are accelerated to 1 MeV kinetic energy and are then passed to a linear accelerator using alternating electromagnetic fields to increase their energy to ~400 MeV. The ions are stripped of electrons by passing them through a carbon foil. The protons are bunched into beam spills which contain ~$4*10^12$ protons in a 1.6 $\micro s$ time window per spill. 
+The BNB is a very pure $\nu_{\mu}$ beam, with only 0.6\% contamination from $\nu_{e}$. The energy also peaks around 700 MeV which is desired based on the probability of oscillation equation which depends on the value of $L/E$, where $L$ is the distance of the detector from the neutrino beam and $E$ is the energy of the neutrino beam. $L/E$ was chosen to match the LSND experiment. The BNB collides 8.9 GeV/c momentum protons from the FNAL booster synchrotron into a beryllium target which produces a high flux of neutrinos. The protons originate from $H^2$ gas molecules that are turned into $H^-$ ions by a Cockroft-Walton generator. The $H^-$ initially are accelerated to 1 MeV kinetic energy and are then passed to a linear accelerator using alternating electromagnetic fields to increase their energy to ~400 MeV. The ions are stripped of electrons by passing them through a carbon foil. The protons are bunched into beam spills which contain ~$4*10^{12}$ protons in a 1.6 $\micro s$ time window per spill. 
 It's at this point that the protons are directed towards the beryllium target. The amount of protons directed towards the target (POT) is measured by two toroids upstream of the target with an error of ~2$\%$. Beam intensity, timing, width, position, and direction are monitored by beam position monitors, multi-wire chamber and resistive monitors. 
 
 The beryllium target is 71.1 cm long, 1.7 proton interaction lengths, and is 0.51 cm in radius. The target is located inside a larger focusing electromagnet called the horn. The horn is an aluminum alloy pulsed toroidal electromagnet. The pulsed current peaks at 170 kA with a time-width of 143 $\micro s$ which coincides with the protons arriving on the target. The current flows from the inner conductor to the outer conductor with a maximum magnetic field of 1.5 Tesla. The magnetic field focuses the charged secondary particles produced by the p-Be interactions. The direction of current can be switched to changed to polarity of the secondary particles being focused creating a beam of either primarily neutrinos, with positively charged secondary particles, or anti-neutrinos. 
