--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -139,7 +139,6 @@ cos\theta & sin\theta \\
 \end{pmatrix}
 \end{equation}
 
-
 \begin{figure}[htp]
 \centering
 \includegraphics[scale=.8]{figs/mixingangle.jpg}
@@ -194,7 +193,6 @@ Finding the Probability for a $\nu_{\mu} \rightarrow \nu_{e}$:
 \centering
 P(\nu_{\mu} \rightarrow \nu_{e}) = |<\nu_{e}|\nu_{\mu}(t)>|^2
 \end{equation}
-
 Remembering that $<\nu_{i}|\nu_{j}>=\delta_{ij}$
 \begin{equation}
 \centering
@@ -279,9 +277,9 @@ j^{0}_{\mu} = \overline{u}\frac{-ig_{z}}{2}(g_v\gamma^{\mu}-g_A\gamma^{\mu}\gamm
 \end{equation}
 where:
 \begin{conditions}
-u 	\& 	\overline{u} & Dirac spinors\\
+u and \overline{u} & Dirac spinors\\
 \gamma^{\mu} & four Dirac gamma matrices\\ 
-\gamma^5,	g_W 	\& 	g_Z & coupling strengths\\
+\gamma^5,	g_W and g_Z & coupling strengths\\
 \end{conditions}
 
 Rewriting the current equation to \ref{eq:chiralcurrent} shows the weak force's chiral nature. Chirality is a property of the particle spinors. It is Lorentz invariant but not constant in time. Chiral Eigenstates are either left or right-handed and are defined by the chirality operator $\gamma^5$ with eigenvalues -1 for left-handed or +1 for right-handed. Particle spinors are generally composed of both chiral components. 
