--- a/neutrinoID.tex
+++ b/neutrinoID.tex
@@ -1,5 +1,5 @@
 \chapter{Neutrino Identification: Finding MicroBooNE's first Neutrinos} \label{ch:neutrinoID}
-The goal of the Neutrino Identification analysis was to positively identify BNB neutrino interactions in the MicroBooNE detector collected during the first days of running. Neutrino event candidates were identified in part by using a cut on detected flash of scintillation light during the 1.6 $\micro s$ beam-spill length of the BNB as well as identifying reconstructed object from the TPC that are neutrino like. After this selection, 2D and 3D event displays were used for verification of the selection performance. This selection was targeted to reduce the ratio of neutrino events to cosmic-only events from the initial 1 neutrino to 675 cosmics to a ratio of 1 to 0.5 or better which is equivalent to a background reduction by a factor of 1000 or more. These selected events were used for MicroBooNE's first public displays of neutrino interactions. A clearly visible neutrino interaction with an identifiable vertex and at least 2 tracks originating from the vertex was what the analysis focused on. This analysis wasn't optimized for high purity or efficiency, but rather for very distinguishable neutrino interactions that could be shared with the public. The description of this analysis below as well as all figures come from MicroBooNE-Note-1002-Pub \cite{neutrinoid} and the corresponding internal note.
+The Neutrino Identification analysis goal was to identify BNB neutrino interactions in the MicroBooNE detector collected during the first days of running. Neutrino event candidates were identified in part by using a cut on detected flash of scintillation light during the 1.6 $\micro s$ beam-spill length of the BNB as well as identifying reconstructed object from the TPC that are neutrino like. The selection performance was verified by using the 2D and 3D event displays. The selection aimed to reduce the ratio of neutrino events to cosmic-only events from the initial 1 neutrino to 675 cosmics to a ratio of 1 to 0.5 or better which is equivalent to a background reduction by a factor of 1000 or more. These selected events were used for MicroBooNE's first public displays of neutrino interactions. A clearly visible neutrino interaction with an identifiable vertex and at least 2 tracks originating from the vertex was what the analysis focused on. This analysis wasn't optimized for high purity or efficiency, but rather for very distinguishable neutrino interactions that could be shared with the public. The description of this analysis below as well as all figures come from MicroBooNE-Note-1002-Pub \cite{neutrinoid} and the corresponding internal note.
 \section{Flash Finding}\label{sec:flashfinding}
 Flash finding is the first step used in finding neutrino interactions. This section will detail how optical information is reconstructed as well as how analysis scripts and event filters were used.
 \subsection{Flash Reconstruction}
@@ -16,7 +16,7 @@ Flash finding is the first step used in finding neutrino interactions. This sect
 \caption{Top: Efficiency for selecting beam events as a function of minimum total PE cut. Bottom: Zoomed into interesting region.}
 \label{fig:PE}
 \end{figure}
-A flash is described as a collection of light seen at the same time within the detector. They are reconstructed by identifying coincident signal from the PMTs above a specific photoelectron (PE) threshold. These signals are called optical hits. Optical hits from all the PMTs are then accumulated into 1 $\micro s$ bins of time. If a specific bin is above a set PE threshold, then the optical hits that overlap in time are the labeled as the hits from the flash. All flash reconstructed properties like average time and x/y positions are then found via the flash labeled optical hits. The total size of the flash is found by summing up the total number of photoelectrons from all PMTs. Neutrino interactions and cosmic muons will have a larger flash size compared to noise and other low-energy backgrounds, therefore a total PE cut is used to reject these backgrounds. A total PE cut of 50 PE was deemed sufficient for this analysis. Figure \ref{fig:PE} show the total PE versus the selection efficiency of neutrino beam events. 
+A definition of a flash is a collection of light above a specific photoelectron (PE) threshold seen at the same time within the detector. These signals are called optical hits. Optical hits from all the PMTs are then accumulated into 1 $\micro s$ bins of time. If a specific bin is above a set PE threshold, then the optical hits that overlap in time are then labeled as the hits from the flash. All flash reconstructed properties like average time and x/y positions are then found via the flash labeled optical hits. The total size of the flash is found by summing up the total number of photoelectrons from all PMTs. Neutrino interactions and cosmic muons will have a larger flash size compared to noise and other low-energy backgrounds, therefore a total PE cut of 50 PE was deemed sufficient and is used to reject these backgrounds in this analysis. Figure \ref{fig:PE} show the total PE versus the selection efficiency of neutrino beam events. 
 
 
 \subsection{Beam Timing}
@@ -41,11 +41,11 @@ It is necessary to get the specific time from flashes if one uses flashes to fil
 \subsection{Event Rates}
 Applying a 50 PE threshold cut inside a 1.6 $\micro s$ window reduces the cosmic-ray passing rate to 0.8\%. With a 5 Hz beam rate, this corresponds to 135 cosmics passing per hour. The neutrino passing rate for this filter is about 22 events per hour. To further increase the neutrino to cosmic ratio, TPC topology cuts were implemented and will be discussed in the following section.
 \section{TPC Topology Selection}  
-In order to further reduce the background of cosmic events, two independent selection streams using TPC wire data reconstruction were implemented. The first using 2D reconstructed clusters, and the second using 3D reconstructed tracks. Both streams look for neutrino interactions in the active TPC volume which are identifiable by two or more tracks originating from the same vertex.
+Two independent selection streams using TPC wire data reconstruction were implemented to further reduce cosmic event background. The first using 2D reconstructed clusters, and the second using 3D reconstructed tracks. Both streams look for neutrino interactions in the active TPC volume which are identifiable by two or more tracks originating from the same vertex.
 
 Both 2D and 3D channels were optimized using MC simulation which used a 128 kV cathode voltage. Passing rates were calculated using a 0.8\% efficiency factor for cosmic events passing to simulate the flash finding described in section \ref{sec:flashfinding}. This efficiency factor was an overestimation and was just used to get a general feel of what signal and background rates we would actually see in data. 
 \subsection{Cosmic Tagging}
-The first step in TPC selection was based on the geometry of cosmic tracks in an event. The cosmic ray muon geometry tagger runs on 3D tracks and assigns a score to each reconstructed track on the likeliness of the track originating from a cosmic. The cosmic scores are detailed below:
+The first step in TPC selection was using the geometry of cosmic tracks in an event to tag tracks that should be thrown out when searching for neutrino induced tracks. The cosmic ray muon geometry tagger runs on 3D tracks and cosmic track likeliness score to each reconstructed track. The cosmic scores are detailed below:
 \begin{itemize}
 \item 1: The track is tagged as entering or entering the TPC
 \item 0.95: The track is a delta ray associated with a tagged track
@@ -53,7 +53,7 @@ The first step in TPC selection was based on the geometry of cosmic tracks in an
 \item 0.4: The track is entering or exiting through the Z boundary
 \item 0: The track isn't tagged
 \end{itemize}
-Clusters are assigned either a 0 or 1, 1 being a cosmic. In simulation, 90\% of cosmics are tagged as cosmics. These tracks are no longer considered when looking for a neutrino topology. Requiring that the tracks be contained in turn affects the neutrino efficiency by 20\%. The algorithm checks that each track is contained within a boundary region of 10 cm from all sides of the TPC. This boundary region was optimized via hand-scanning of experimental data.
+Clusters are assigned either a 0 or 1, 1 being a cosmic. In simulation, 90\% of cosmics are tagged as cosmics and are no longer considered. Track containment affects the neutrino efficiency by 20\%. The algorithm checks that each track is contained within a boundary region of 10 cm from all sides of the TPC. This boundary region was optimized via hand-scanning of experimental data.
 
 As can be expected, cosmic tagging is more efficient in the 3D channel (tracks) than the 2D channel (clusters) because the reconstructed tracks can use the full 3D position information of the entering and exiting points while the 2D channel mainly use the reconstructed x position of the cluster which is associated to timing. 
 
